--- a/news-and-events.html
+++ b/news-and-events.html
@@ -314,8 +314,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <iframe class="video" title="vimeo-player" src="https://player.vimeo.com/video/1021638326?h=be554a11d6"
-                        width="100%" height="360" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="video" title="vimeo-player"
+                        src="https://player.vimeo.com/video/1021638326?h=be554a11d6" width="100%" height="360"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -356,8 +357,9 @@
                 </div>
                 <div class="modal-body">
 
-                    <iframe class="video" title="vimeo-player" src="https://player.vimeo.com/video/1021740430?h=7f27cc2eab"
-                        width="100%" height="360" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="video" title="vimeo-player"
+                        src="https://player.vimeo.com/video/1021740430?h=7f27cc2eab" width="100%" height="360"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -376,8 +378,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <iframe class="video" title="vimeo-player" src="https://player.vimeo.com/video/1021669956?h=9c87191834"
-                        width="100%" height="360" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="video" title="vimeo-player"
+                        src="https://player.vimeo.com/video/1021669956?h=9c87191834" width="100%" height="360"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -395,8 +398,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <iframe class="video" title="vimeo-player" src="https://player.vimeo.com/video/1021661254?h=08b43852b0"
-                        width="100%" height="360" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="video" title="vimeo-player"
+                        src="https://player.vimeo.com/video/1021661254?h=08b43852b0" width="100%" height="360"
+                        frameborder="0" allowfullscreen></iframe>
 
                 </div>
 
@@ -416,8 +420,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <iframe class="video" title="vimeo-player" src="https://player.vimeo.com/video/1021651587?h=dc6a8220ba"
-                        width="100%" height="360" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="video" title="vimeo-player"
+                        src="https://player.vimeo.com/video/1021651587?h=dc6a8220ba" width="100%" height="360"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -434,8 +439,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <iframe class="video" title="vimeo-player" src="https://player.vimeo.com/video/1021628601?h=5bdb99ef15"
-                        width="100%" height="360" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="video" title="vimeo-player"
+                        src="https://player.vimeo.com/video/1021628601?h=5bdb99ef15" width="100%" height="360"
+                        frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
