--- a/news-and-events.html
+++ b/news-and-events.html
@@ -315,7 +315,7 @@
                 </div>
                 <div class="modal-body">
                     <iframe class="video" title="vimeo-player"
-                        src="https://player.vimeo.com/video/1021638326?h=be554a11d6" width="100%" height="360"
+                        src="https://player.vimeo.com/video/1021638326?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" height="360"
                         frameborder="0" allowfullscreen></iframe>
                 </div>
 
@@ -459,16 +459,16 @@
     <script src="assets/js/app.js"></script>
     <script>
         $(document).ready(function () {
-            // When modal is closed, reset the video source to stop it
+            // When a modal is closed, reset only the video in that modal
             $('.modal').on('hidden.bs.modal', function () {
-                var $iframe = $('.video');
+                var $iframe = $(this).find('.video'); // Target the iframe within the current modal
                 var src = $iframe.attr('src');
                 $iframe.attr('src', ''); // Reset src to stop video
                 $iframe.attr('src', src); // Reapply src so it can play next time modal is opened
             });
         });
-
     </script>
+    
 </body>
 
 </html>
