--- a/news-and-events.html
+++ b/news-and-events.html
@@ -358,7 +358,7 @@
                 <div class="modal-body">
 
                     <iframe class="video" title="vimeo-player"
-                        src="https://player.vimeo.com/video/1021740430?h=7f27cc2eab" width="100%" height="360"
+                        src="https://player.vimeo.com/video/1021740430?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" height="360"
                         frameborder="0" allowfullscreen></iframe>
                 </div>
 
@@ -379,7 +379,7 @@
                 </div>
                 <div class="modal-body">
                     <iframe class="video" title="vimeo-player"
-                        src="https://player.vimeo.com/video/1021669956?h=9c87191834" width="100%" height="360"
+                        src="https://player.vimeo.com/video/1021669956?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" height="360"
                         frameborder="0" allowfullscreen></iframe>
                 </div>
 
@@ -399,7 +399,7 @@
                 </div>
                 <div class="modal-body">
                     <iframe class="video" title="vimeo-player"
-                        src="https://player.vimeo.com/video/1021661254?h=08b43852b0" width="100%" height="360"
+                        src="https://player.vimeo.com/video/1021661254?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" height="360"
                         frameborder="0" allowfullscreen></iframe>
 
                 </div>
@@ -421,7 +421,7 @@
                 </div>
                 <div class="modal-body">
                     <iframe class="video" title="vimeo-player"
-                        src="https://player.vimeo.com/video/1021651587?h=dc6a8220ba" width="100%" height="360"
+                        src="https://player.vimeo.com/video/1021651587?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" height="360"
                         frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
@@ -440,7 +440,7 @@
                 </div>
                 <div class="modal-body">
                     <iframe class="video" title="vimeo-player"
-                        src="https://player.vimeo.com/video/1021628601?h=5bdb99ef15" width="100%" height="360"
+                        src="https://player.vimeo.com/video/1021628601?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" height="360"
                         frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
