--- a/news-and-events.html
+++ b/news-and-events.html
@@ -74,14 +74,24 @@
 
     </header>
     <main>
-        <section class="hero-section">
+        <section class="hero-section pb-5" style="min-height: fit-content !important;">
             <div class="container">
                 <div class="row  ">
                     <div class="col-lg-12 order-lg-1 order-2 hero-text">
                         <span class="tag-text ">Agenda</span>
-                        <h1 class="main-heading mt-3 mb-3">Biolife Webina Agenda</h1>
-                        <iframe src="assets/images/Biolife_Agenda.pdf" class="w-100" loading="lazy" height="600px"
-                            title="PDF-file"></iframe>
+                        <h1 class="main-heading mt-3 mb-3">Biolife Webinar Agenda</h1>
+                        <p class="main-text">
+                            BioLife Research Ltd. BioLife is a leading professional consultancy firm established in 2018 with a mission to catalyze scientific excellence
+by supporting critical components required to advance sustainable research in Africa. Based in Kenya and registered as a private limited
+company, BioLife has quickly become a cornerstone in the region's scientific and research community. With an extensive network of labs,
+researchers, and companies across Kenya, BRL is uniquely positioned to drive innovation...
+                        </p>
+                        <!-- <iframe src="assets/images/Biolife_Agenda.pdf" class="w-100" loading="lazy" height="600px"
+                            title="PDF-file"></iframe> -->
+
+                        <div class="nav-btn" style="width: fit-content;">
+                            <a class="nav-link text-white" target="_blank" href="assets/images/Biolife_Agenda.pdf">Read Full Biolife Agenda &rArr;</a>
+                        </div>
                     </div>
 
                 </div>
@@ -97,11 +107,8 @@
                     <div class="row justify-content-center ">
                         <div class="col-lg-10 mx-auto  text-center mb-5">
                             <span class="tag-text ">Presentation</span>
-                            <h1 class="main-heading mt-1 mb-2">Biolife Webina Presentation</h1>
-                            <p class="main-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil atque voluptates a nemo
-                                provident rerum ipsum molestias eaque repellat ea.
-                            </p>
+                            <h1 class="main-heading mt-1 mb-2">Biolife Webinar Presentation</h1>
+                          
                         </div>
                         <div class="col-lg-3 col-md-6 mb-5  ">
                             <div class="service-card" type="button" class="btn btn-primary" data-bs-toggle="modal"
