--- a/news-and-events.html
+++ b/news-and-events.html
@@ -79,17 +79,25 @@
                 <div class="row  ">
                     <div class="col-lg-12 order-lg-1 order-2 hero-text">
                         <span class="tag-text ">Agenda</span>
-                        <h1 class="main-heading mt-3 mb-3">Biolife Webinar Agenda</h1>
+                        <h1 class="main-heading mt-3 mb-3">BioLife Research Webinar: September 25, 2025</h1>
                         <p class="main-text">
-                            BioLife Research Ltd. BioLife is a leading professional consultancy firm established in 2018 with a mission to catalyze scientific excellence
-by supporting critical components required to advance sustainable research in Africa. Based in Kenya and registered as a private limited
-company, BioLife has quickly become a cornerstone in the region's scientific and research community. With an extensive network of labs,
-researchers, and companies across Kenya, BRL is uniquely positioned to drive innovation...
+                            BioLife Research convened a multi-stakeholder virtual meeting to explore the value of artificial intelligence (AI) platforms in accelerating the discovery of vaccines and therapeutic drugs for prioritized diseases in Africa. The meeting addressed the following critical questions:
+                            <ol>
+                                <li class="main-text">
+                                    How can artificial intelligence approaches accelerate the discovery of products for prioritized diseases in Africa?
+                                </li>
+                                <li class="main-text">
+                                    How can artificial intelligence be applied better to manage the delivery and roll-out of vaccines in Africa?
+                                </li>
+                                <li class="main-text">
+                                    What capabilities, networks, and collaborations do we require in Africa to maximize the potential of AI in product development and delivery?
+                                </li>
+                            </ol>
                         </p>
                         <!-- <iframe src="assets/images/Biolife_Agenda.pdf" class="w-100" loading="lazy" height="600px"
                             title="PDF-file"></iframe> -->
 
-                        <div class="nav-btn" style="width: fit-content;">
+                        <div class="nav-btn mt-3" style="width: fit-content;">
                             <a class="nav-link text-white" target="_blank" href="assets/images/Biolife_Agenda.pdf">Read Full Biolife Agenda &rArr;</a>
                         </div>
                     </div>
@@ -106,8 +114,10 @@ researchers, and companies across Kenya, BRL is uniquely positioned to drive inn
                 <div class="container">
                     <div class="row justify-content-center ">
                         <div class="col-lg-10 mx-auto  text-center mb-5">
-                            <span class="tag-text ">Presentation</span>
-                            <h1 class="main-heading mt-1 mb-2">Biolife Webinar Presentation</h1>
+                            <!-- <span class="tag-text ">Presentation</span> -->
+                            <h1 class="main-heading mt-1 mb-2">BioLife Webinar Presentations
+
+                            </h1>
                           
                         </div>
                         <div class="col-lg-3 col-md-6 mb-5  ">
