--- a/news-and-events.html
+++ b/news-and-events.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="row  ">
                     <div class="col-lg-12 order-lg-1 order-2 hero-text">
-                        <span class="tag-text ">Agenda</span>
+                        <!-- <span class="tag-text ">Agenda</span> -->
                         <h1 class="main-heading mt-3 mb-3">BioLife Research Webinar: September 25, 2025</h1>
                         <p class="main-text">
                             BioLife Research convened a multi-stakeholder virtual meeting to explore the value of artificial intelligence (AI) platforms in accelerating the discovery of vaccines and therapeutic drugs for prioritized diseases in Africa. The meeting addressed the following critical questions:
